# 2023-cpp-autumn

./: .gitignore  README.md
2023.09.08-homework-1/task1/: main.cpp
2023.09.08-homework-1/task2/: main.cpp
2023.09.08-homework-1/task3/: main.cpp
2023.09.08-homework-1/task4/: main.cpp
2023.09.08-homework-1/task5/: main.cpp
2023.09.08-homework-1/task6/: main.cpp
2023.09.08-homework-1/task7/: main.cpp
2023.09.21-homework-2/task1/: main.cpp
2023.09.21-homework-2/task2/: main.cpp
2023.09.21-homework-2/task3/: main.cpp
2023.09.21-homework-2/task4/: main.cpp
2023.09.21-homework-2/task5/: main.cpp
2023.09.21-homework-2/task6/: main.cpp
2023.09.21-homework-2/task7/: main.cpp
2023.09.21-homework-2/task8/: main.cpp
2023.09.21-homework-3/task1/: main.cpp
2023.09.21-homework-3/task3/: main.cpp
2023.09.21-homework-3/task5/: main.cpp
2023.09.21-homework-3/task6/: main.cpp
2023.09.21-homework-3/task8/: main.cpp
2023.09.21-homework-4/task1/: main.cpp
2023.09.21-homework-4/task3/: main.cpp
2023.09.21-homework-4/task4/: main.cpp
2023.09.21-homework-4/task5/: main.cpp
2023.09.21-homework-4/task6/: main.cpp
2023.09.21-homework-4/task7/: main.cpp
2023.10.01-homework-3/task2/: main.cpp
2023.10.01-homework-3/task3/: main.cpp
2023.11.22-homework-6/: 2023.11.22-homework-6.sln
2024.05.26-petprogect/: BohrVertex.cpp  BohrVertex.h  ConsoleHandler.cpp  StringSearch.cpp  StringSearch.h
myLine/: CMakeLists.txt  line.cpp  line.h  main.cpp  output.h
pet-progekt/: CMakeLists.txt  ConsoleHandler.h  main.cpp
Новая папка (2)/: main.cpp
(+49 files in other folders)
